# reverb

./: .gitignore  Cargo.toml  README.md
certs/: cert.der  key.der
configs/: config.toml
crates/reverb-client/: Cargo.toml
crates/reverb-client/src/: main.rs
crates/reverb-client/src/config/: config.rs  data.rs  internet.rs  mod.rs  startup_shutdown.rs
crates/reverb-client/src/failure/: failure.rs
crates/reverb-client/src/internal/: internal.rs  internet.rs  mod.rs  playlist.rs  queue.rs  song.rs
crates/reverb-client/src/internal/internet/: communicator.rs  connection.rs  mod.rs
crates/reverb-client/src/ui/: mod.rs  ui.rs
crates/reverb-client/src/ui/cli/: cli.rs  cli_ui.rs  command_spec.rs  mod.rs  startup.rs
crates/reverb-core/: Cargo.toml
crates/reverb-core/src/: lib.rs  network.rs
crates/reverb-core/src/failure/: failure.rs
crates/reverb-core/src/network_command/: ID.rs  default_command.rs  echo.rs  get_online_users.rs  helpers.rs  mod.rs  online_users.rs  set_echo_availability.rs  skip.rs  user_data.rs
crates/reverb-server/: Cargo.toml
crates/reverb-server/src/: command_handling.rs  main.rs  server_startup.rs
crates/reverb-server/src/network/: connection.rs  mod.rs  packet_handling.rs
data/: startup.toml
data/playlists/: Default Playlist.toml
src/: main.rs
src/Failiure/: failiure.rs
src/config/: config.rs  data.rs  mod.rs  startup_shutdown.rs
src/failure/: failure.rs
src/internal/: internal.rs  internet.rs  mod.rs  playlist.rs  queue.rs  song.rs
src/ui/: cli.rs  ui.rs
src/ui/cli/: cli.rs  cli_ui.rs  command_spec.rs  mod.rs
