[package]
name = "reverb-client"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
license-file = "../../LICENSE"

[dependencies]
rodio = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.11"
once_cell = "1.18.0"
audiotags = "0.5.0"
lofty = "0.23.2"
anyhow = "1.0"
crossterm = "0.29.0"
rustls = { version = "0.23.37", features = ["ring"] }
quinn-proto = { version = "0.11.0", features = ["ring"] }
tokio = { version = "1.36.0", features = ["full"] }
quinn = { version = "0.11.0", features = ["ring"] }
rand = "0.10.0"
lru = "0.16.3"