[package]
name = "reverb-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
reverb-core = { path = "../reverb-core" }
rustls = { version = "0.23.37", features = ["ring"] }
quinn-proto = { version = "0.11.0", features = ["ring"] }
tokio = { version = "1.36.0", features = ["full"] }
quinn = { version = "0.11.0", features = ["ring"] }
rcgen = "0.13.0"
